Shenandoah: Resolve oops in SATB filter

XMLWordPrintable

    • gc
    • b09
    • generic
    • generic

        When updating reference is piggy-backed on marking phase, we need to resolve oops that we get in SATB buffers before checking if they are marked, because from-space oops never get marked. This generates unnecessary traffic in SATB.

              Assignee:
              Roman Kennke
              Reporter:
              Roman Kennke
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: