8203232: Shenandoah: Resolve oops in SATB filter

Reviewed-by: shade